# main.go
@@ -30,6 +30,8 @@ func main() {
 		{
 			binance.GET("/ticker/24hr", handlers.Binance().Get24HourTickerData)
 			binance.GET("/ticker/24hr/:pair", handlers.Binance().GetTickerForPair)
+			binance.GET("/ticker/24hr/gainers", handlers.Binance().Get24HourGainersTickerData)
+
 		}
 	}
 
